<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textil_nombre"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/campo_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:inputType="text"
            android:hint="@string/nombre" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/textil_telefono"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/campo_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:inputType="phone"
            android:hint="@string/telefono" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/textil_email"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/campo_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="36dp"
        android:inputType="textEmailAddress"
    android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/textil_descripcion"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/campo_descripcion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="36dp"
        android:inputType="text"
    android:hint="@string/descripcion" />
</com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/textil_nacimiento"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/campo_nacimiento"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="36dp"
        android:inputType="number"
    android:hint="@string/nacimiento" />
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/boton_siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/boton_siguiente">

        </Button>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>